--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,36 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.contactinfo()[pri:5, instance:com.loginpage.Validloginwithdashboard@36916eb0]">contactinfo</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.contactinfo()[pri:5, instance:com.loginpage.Validloginwithdashboard@67f639d3]">contactinfo</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:31</td>   <td>-2376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.crm()[pri:2, instance:com.loginpage.Validloginwithdashboard@36916eb0]">crm</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:49</td>   <td>26756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.country()[pri:21, instance:com.loginpage.Validloginwithdashboard@67f639d3]">country</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:20</td>   <td>-13756</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validloginwithdashboard.launchbrowser()[pri:0, instance:com.loginpage.Validloginwithdashboard@36916eb0]">&gt;&gt;launchbrowser</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:20</td>   <td>-2464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.crm()[pri:2, instance:com.loginpage.Validloginwithdashboard@67f639d3]">crm</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:05</td>   <td>-17922</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validloginwithdashboard.launchbrowser()[pri:0, instance:com.loginpage.Validloginwithdashboard@67f639d3]">&gt;&gt;launchbrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:31</td>   <td>-2066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.lead()[pri:3, instance:com.loginpage.Validloginwithdashboard@36916eb0]">lead</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:21</td>   <td>-1799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.lead()[pri:3, instance:com.loginpage.Validloginwithdashboard@67f639d3]">lead</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:58</td>   <td>25076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.manadatorysymbolofbranch()[pri:15, instance:com.loginpage.Validloginwithdashboard@36916eb0]">manadatorysymbolofbranch</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:49</td>   <td>26417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.leadpurpose()[pri:17, instance:com.loginpage.Validloginwithdashboard@67f639d3]">leadpurpose</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:58</td>   <td>24942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofemail()[pri:14, instance:com.loginpage.Validloginwithdashboard@36916eb0]">mandatorysymbolofemail</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:49</td>   <td>26872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.location()[pri:22, instance:com.loginpage.Validloginwithdashboard@67f639d3]">location</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:58</td>   <td>24760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofname()[pri:11, instance:com.loginpage.Validloginwithdashboard@36916eb0]">mandatorysymbolofname</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:49</td>   <td>26160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofbranch()[pri:15, instance:com.loginpage.Validloginwithdashboard@67f639d3]">mandatorysymbolofbranch</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:58</td>   <td>24863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofphonenumberfield()[pri:13, instance:com.loginpage.Validloginwithdashboard@36916eb0]">mandatorysymbolofphonenumberfield</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:49</td>   <td>26098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofemail()[pri:14, instance:com.loginpage.Validloginwithdashboard@67f639d3]">mandatorysymbolofemail</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:58</td>   <td>24816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandotrysymboloftype()[pri:12, instance:com.loginpage.Validloginwithdashboard@36916eb0]">mandotrysymboloftype</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:48</td>   <td>25720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofname()[pri:11, instance:com.loginpage.Validloginwithdashboard@67f639d3]">mandatorysymbolofname</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:32</td>   <td>-922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofcontactinfo()[pri:4, instance:com.loginpage.Validloginwithdashboard@36916eb0]">validationmessageofcontactinfo</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:48</td>   <td>25852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofphonenumberfield()[pri:13, instance:com.loginpage.Validloginwithdashboard@67f639d3]">mandatorysymbolofphonenumberfield</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:53</td>   <td>20098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofsalesfollowup()[pri:6, instance:com.loginpage.Validloginwithdashboard@36916eb0]">validationmessageofsalesfollowup</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:49</td>   <td>26261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandotrysymbolofleadsource()[pri:16, instance:com.loginpage.Validloginwithdashboard@67f639d3]">mandotrysymbolofleadsource</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:25</td>   <td>-8141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validcrendentials()[pri:1, instance:com.loginpage.Validloginwithdashboard@36916eb0]">validcrendentials</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:48</td>   <td>25782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandotrysymboloftype()[pri:12, instance:com.loginpage.Validloginwithdashboard@67f639d3]">mandotrysymboloftype</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:54</td>   <td>20744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifycheckbox()[pri:7, instance:com.loginpage.Validloginwithdashboard@36916eb0]">verifycheckbox</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:49</td>   <td>26994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.pageupload()[pri:23, instance:com.loginpage.Validloginwithdashboard@67f639d3]">pageupload</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:54</td>   <td>21058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifyname()[pri:8, instance:com.loginpage.Validloginwithdashboard@36916eb0]">verifyname</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:49</td>   <td>26466</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.productname()[pri:18, instance:com.loginpage.Validloginwithdashboard@67f639d3]">productname</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:56</td>   <td>22674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifythedropdown()[pri:9, instance:com.loginpage.Validloginwithdashboard@36916eb0]">verifythedropdown</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:49</td>   <td>26554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.salesperson()[pri:19, instance:com.loginpage.Validloginwithdashboard@67f639d3]">salesperson</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/12 17:06:56</td>   <td>23061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifytheinvalidname()[pri:10, instance:com.loginpage.Validloginwithdashboard@36916eb0]">verifytheinvalidname</td> 
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:49</td>   <td>26691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.status()[pri:20, instance:com.loginpage.Validloginwithdashboard@67f639d3]">status</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:22</td>   <td>-374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofcontactinfo()[pri:4, instance:com.loginpage.Validloginwithdashboard@67f639d3]">validationmessageofcontactinfo</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:43</td>   <td>20097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofsalesfollowup()[pri:6, instance:com.loginpage.Validloginwithdashboard@67f639d3]">validationmessageofsalesfollowup</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:12</td>   <td>-10125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validcrendentials()[pri:1, instance:com.loginpage.Validloginwithdashboard@67f639d3]">validcrendentials</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:43</td>   <td>20880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifycheckbox()[pri:7, instance:com.loginpage.Validloginwithdashboard@67f639d3]">verifycheckbox</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:44</td>   <td>21314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifyname()[pri:8, instance:com.loginpage.Validloginwithdashboard@67f639d3]">verifyname</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:46</td>   <td>23273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifythedropdown()[pri:9, instance:com.loginpage.Validloginwithdashboard@67f639d3]">verifythedropdown</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/16 10:25:46</td>   <td>23716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifytheinvalidname()[pri:10, instance:com.loginpage.Validloginwithdashboard@67f639d3]">verifytheinvalidname</td> 
   <td>main@943010986</td>   <td></td> </tr>
 </table>
