--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,30 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ed7b7c">  <td>24/07/08 15:03:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Forgottenemail.existemailid()[pri:2, instance:com.loginpage.Forgottenemail@1e1a0406]">existemailid</td> 
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofsalesfollowup()[pri:6, instance:com.loginpage.Validloginwithdashboard@26e356f0]">validationmessageofsalesfollowup</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/08 15:03:39</td>   <td>-11238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpage.testBlankPassword()[pri:3, instance:com.loginpage.Loginpage@2c1b194a]">testBlankPassword</td> 
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:00</td>   <td>-21020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validationmessageofcontactinfo()[pri:4, instance:com.loginpage.Validloginwithdashboard@26e356f0]">validationmessageofcontactinfo</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="ed7b7c">  <td>24/07/08 15:03:58</td>   <td>8133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Forgottenemail.navigation()[pri:4, instance:com.loginpage.Forgottenemail@1e1a0406]">navigation</td> 
+<tr bgcolor="a7f793">  <td>24/07/12 17:15:49</td>   <td>-92111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpage.logincredentails()[pri:1, instance:com.loginpage.Loginpage@71a8adcf]">logincredentails</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/08 15:03:27</td>   <td>-23368</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpage.launchbrowser()[pri:0, instance:com.loginpage.Loginpage@2c1b194a]">&gt;&gt;launchbrowser</td> 
+<tr bgcolor="ed7b7c">  <td>24/07/12 17:16:07</td>   <td>-73746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Forgottenemail.forgotpassword()[pri:1, instance:com.loginpage.Forgottenemail@54a7079e]">forgotpassword</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:25</td>   <td>3673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifytheinvalidname()[pri:10, instance:com.loginpage.Validloginwithdashboard@26e356f0]">verifytheinvalidname</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:16:02</td>   <td>-78982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpage.testButtonIsEnabled()[pri:4, instance:com.loginpage.Loginpage@71a8adcf]">testButtonIsEnabled</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:15:55</td>   <td>-86149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpage.testBlankPassword()[pri:3, instance:com.loginpage.Loginpage@71a8adcf]">testBlankPassword</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:16:52</td>   <td>-29505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validcrendentials()[pri:1, instance:com.loginpage.Validloginwithdashboard@26e356f0]">validcrendentials</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:27</td>   <td>5757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofname()[pri:11, instance:com.loginpage.Validloginwithdashboard@26e356f0]">mandatorysymbolofname</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:15:20</td>   <td>-121165</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpage.launchbrowser()[pri:0, instance:com.loginpage.Loginpage@71a8adcf]">&gt;&gt;launchbrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/08 15:03:36</td>   <td>-14508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpage.validation()[pri:2, instance:com.loginpage.Loginpage@2c1b194a]">validation</td> 
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:27</td>   <td>5808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandotrysymboloftype()[pri:12, instance:com.loginpage.Validloginwithdashboard@26e356f0]">mandotrysymboloftype</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>24/07/08 15:04:23</td>   <td>32793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.validcrendentials()[pri:5, instance:com.loginpage.Validloginwithdashboard@3cebbb30]">validcrendentials</td> 
+<tr bgcolor="ed7b7c">  <td>24/07/12 17:16:26</td>   <td>-55517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Forgottenemail.navigation()[pri:4, instance:com.loginpage.Forgottenemail@54a7079e]">navigation</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="ed7b7c">  <td>24/07/08 15:03:55</td>   <td>4592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Forgottenemail.validdata()[pri:3, instance:com.loginpage.Forgottenemail@1e1a0406]">validdata</td> 
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:22</td>   <td>675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifycheckbox()[pri:7, instance:com.loginpage.Validloginwithdashboard@26e356f0]">verifycheckbox</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/08 15:03:35</td>   <td>-15738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpage.logincredentails()[pri:1, instance:com.loginpage.Loginpage@2c1b194a]">logincredentails</td> 
+<tr bgcolor="ed7b7c">  <td>24/07/12 17:16:21</td>   <td>-59599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Forgottenemail.validdata()[pri:3, instance:com.loginpage.Forgottenemail@54a7079e]">validdata</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="ed7b7c">  <td>24/07/08 15:03:44</td>   <td>-5817</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Forgottenemail.launchbrowser()[pri:0, instance:com.loginpage.Forgottenemail@1e1a0406]">&gt;&gt;launchbrowser</td> 
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:01</td>   <td>-20082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.contactinfo()[pri:5, instance:com.loginpage.Validloginwithdashboard@26e356f0]">contactinfo</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:27</td>   <td>6055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofemail()[pri:14, instance:com.loginpage.Validloginwithdashboard@26e356f0]">mandatorysymbolofemail</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:24</td>   <td>3382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifythedropdown()[pri:9, instance:com.loginpage.Validloginwithdashboard@26e356f0]">verifythedropdown</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:27</td>   <td>6099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.manadatorysymbolofbranch()[pri:15, instance:com.loginpage.Validloginwithdashboard@26e356f0]">manadatorysymbolofbranch</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="ed7b7c">  <td>24/07/12 17:16:17</td>   <td>-63960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Forgottenemail.existemailid()[pri:2, instance:com.loginpage.Forgottenemail@54a7079e]">existemailid</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:22</td>   <td>1009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.verifyname()[pri:8, instance:com.loginpage.Validloginwithdashboard@26e356f0]">verifyname</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>24/07/12 17:15:52</td>   <td>-89436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpage.validation()[pri:2, instance:com.loginpage.Loginpage@71a8adcf]">validation</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="ed7b7c">  <td>24/07/12 17:16:02</td>   <td>-78954</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Forgottenemail.launchbrowser()[pri:0, instance:com.loginpage.Forgottenemail@54a7079e]">&gt;&gt;launchbrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="fcb6ab">  <td>24/07/08 15:04:19</td>   <td>28262</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validloginwithdashboard.launchbrowser()[pri:0, instance:com.loginpage.Validloginwithdashboard@3cebbb30]">&gt;&gt;launchbrowser</td> 
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:16:46</td>   <td>-35434</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Validloginwithdashboard.launchbrowser()[pri:0, instance:com.loginpage.Validloginwithdashboard@26e356f0]">&gt;&gt;launchbrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/08 15:03:33</td>   <td>-16950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpage.invalidlogin()[pri:0, instance:com.loginpage.Loginpage@2c1b194a]">invalidlogin</td> 
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:17:27</td>   <td>5902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.mandatorysymbolofphonenumberfield()[pri:13, instance:com.loginpage.Validloginwithdashboard@26e356f0]">mandatorysymbolofphonenumberfield</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>24/07/08 15:03:44</td>   <td>-5885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpage.testButtonIsEnabled()[pri:4, instance:com.loginpage.Loginpage@2c1b194a]">testButtonIsEnabled</td> 
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:16:58</td>   <td>-22744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.crm()[pri:2, instance:com.loginpage.Validloginwithdashboard@26e356f0]">crm</td> 
   <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="ed7b7c">  <td>24/07/08 15:03:50</td>   <td>-675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Forgottenemail.forgotpassword()[pri:1, instance:com.loginpage.Forgottenemail@1e1a0406]">forgotpassword</td> 
+<tr bgcolor="a7f793">  <td>24/07/12 17:15:48</td>   <td>-93073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpage.invalidlogin()[pri:0, instance:com.loginpage.Loginpage@71a8adcf]">invalidlogin</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>24/07/12 17:16:59</td>   <td>-22417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Validloginwithdashboard.lead()[pri:3, instance:com.loginpage.Validloginwithdashboard@26e356f0]">lead</td> 
   <td>main@943010986</td>   <td></td> </tr>
 </table>
